--- a/css/hojadeestilo.css
+++ b/css/hojadeestilo.css
@@ -45,7 +45,7 @@ input
 
    .khg7BBttoo{
 border: none;
-background-color: rgb(255, 0, 0)
+background-color: rgb(255, 0, 0);
 color: white;
 font-size: 13pt;
 height: 50px;
